# optimal-hp

./: .gitignore  0_home.py  1_imposed_q0.py  2_imposed_w0.py  3_imposed_COP0.py  README.md  app.py  calc_imposed_q0.py  feedback.py  page0_home.py  page1.py  page2.py  pyproject.toml  requirements.txt
util/: calc_imposed_q0.py  calc_imposed_qp0.py  feedback.py  navigation.py  plot.py  test.py
