[project]
name = "streamlit-paper-optimal-hp"
version = "2025.05.05"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
    "st-theme>=1.2.3",
    "gspread>=5.12.4",
    "oauth2client>=4.1.3",
    "matplotlib>=3.10.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
